--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,13 @@
 h1 {
   font-family: "edwardian script itc", helvetica, arial;
-  font-size: 2.5em;
+  font-size: 3em;
 }
 
 p.message {
   font-family: "edwardian script itc", helvetica, arial;
-  font-size: 1.5em;
+  font-size: 2em;
+}
+
+img.big-poster {
+  width: 50%;
 }
