--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 h1 {
-  font-family: "edwardian script itc", helvetica, arial;
+  font-family: "Snell Roundhand", Palatino, helvetica, arial;
   font-size: 2.5em;
 }
 
 p.message {
-  font-family: "edwardian script itc", helvetica, arial;
+  font-family: "Snell Roundhand", Palatino, helvetica, arial;
   font-size: 1.5em;
 }
 
