--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family: "Snell Roundhand", Palatino, helvetica, arial;
+  font-family: " Edwardian Script ITC", "Snell Roundhand", Palatino, helvetica, arial;
   font-size: 2.5em;
 }
 
