--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family: "Edwardian Script ITC", "Snell Roundhand", Palatino, helvetica, arial;
+  font-family: normal small Georgia, "Times New Roman", Times, serif;
   font-size: 2.5em;
 }
 
