--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family: normal small Georgia, "Times New Roman", Times, serif;
+  font-family: Zapfino, normal small Georgia, "Times New Roman", Times, serif;
   font-size: 2.0em;
 }
 
