--- a/default.css
+++ b/default.css
@@ -8,7 +8,7 @@ body {
 	margin: 0;
 	padding: 0;
 	background: #FBF7EC url(images/img03.png) repeat-x;
-	font:  normal small Georgia, "Times New Roman", Times, serif;
+	font:  Zapfino, normal small Georgia, "Times New Roman", Times, serif;
 	color: #999999;
 }
 
