--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ h1 {
 }
 
 p.message {
-  font-family: normal small Georgia, "Times New Roman", Times, serif;
+  font-family: Zapfino, normal small Georgia, "Times New Roman", Times, serif;
   font-size: 1.5em;
 }
 
