--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 h1 {
-  font-family: Zapfino, Georgia, Times New Roman, Times, serif;
+  font-family: Georgia, serif;
   font-size: 2.0em;
 }
 
 p.message {
-  font-family: Zapfino, Georgia, Times New Roman, Times, serif;
+  font-family Georgia, serif;
   font-size: 1.5em;
 }
 
