--- a/default.css
+++ b/default.css
@@ -8,7 +8,7 @@ body {
 	margin: 0;
 	padding: 0;
 	background: #FBF7EC url(images/img03.png) repeat-x;
-	font:  Zapfino;
+	font:  Copperplate / Copperplate Gothic Light, sans-serif;
 	color: #999999;
 }
 
