--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 h1 {
-  font-family: Zapfino, serif;
+  font-family:Copperplate / Copperplate Gothic Light, sans-serif;
   font-size: 2.0em;
 }
 
 p.message {
-  font-family Zapfino, serif;
+  font-family Copperplate / Copperplate Gothic Light, sans-serif;
   font-size: 1.5em;
 }
 
