--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 h1 {
-  font-family:Copperplate / Copperplate Gothic Light, sans-serif;
+  font-family Copperplate / Copperplate Gothic Light, sans-serif;
   font-size: 2.0em;
 }
 
