--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 h1 {
-  font-family Zapfino linostype one;
-  font-size: 2.0em;
+  font-family Georgia;
+  font-size: 1.5em;
 }
 
 p.message {
-  font-family Zapfino linostype one;
+  font-family Georgia
   font-size: 1.5em;
 }
 
