--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,10 @@
 h1 {
-  font-family:"Times New Roman", Times, Georgia, serif;
+  font-family: Zapfino linotype one;
   font-size: 2.0em;
 }
 
 p.message {
-  font-family: "Times New Roman", Times, Georgia, serif;
+  font-family: Zapfino linotype one;
   font-size: 1.5em;
 }
 
