--- a/default.css
+++ b/default.css
@@ -8,7 +8,7 @@ body {
 	margin: 0;
 	padding: 0;
 	background: #FFFFFF url(images/img03.png) repeat-x;
-	font: Zapfino linotype one;
+	font: Georgia;
 	color: #999999;
 }
 
